# convertor_pytgbotapi

./: .gitignore  actions.py  bot_instance.py  config.py  config_template.py  converter.py  db_engine.py  helper.py  main.py  models.py  pyproject.toml  router.py
alembic/: env.py
alembic/versions/: 5353284a1c9a_.py  6f7f1b395f93_.py
asd/: run.py
converter/: __main__.py  actions.py  bot_instance.py  helper.py  router.py
core/: config.py  constants.py
db/: __main__.py  db_engine.py  update_database.py
db/scripts/: directions.sql  phrases.sql
