[tool.poetry]
name = "python converter bot"
version = "0.1.0"
description = ""
authors = ["ivan <sumarokovj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.14.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
psycopg = "^3.1.12"
psycopg-binary = "^3.1.12"
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "telebot",
    "telebot.types",
    "sqlalchemy",
    "sqlalchemy.orm",
    "sqlalchemy.engine",
]
ignore_missing_imports = true

[tool.isort]
import_heading_stdlib= "Standard Library"
import_heading_thirdparty= "Third Party Stuff"
import_heading_firstparty= "My Stuff"

multi_line_output= 5
line_length= 60
combine_as_imports= "True"
include_trailing_comma= "True"
force_grid_wrap= 2
